# RAG-based-Gen-AI-HND-Curriculum

./: .gitignore  LICENSE  Makefile  README.md  app.py  data.py  main.py  pyproject.toml  requirements.txt
src/: main.py  rag.py
src/config/: __init__.py  embedding_configs.py  vector_db_configs.py
src/vectordbs/: chroma_db_wrapper.py  pinecone_db_wrapper copy.py  vector_db_interface.py
